# sentinel

./: .dockerignore  .gitignore  CHALLENGE.md  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
api/: Dockerfile  README.md  cloudbuild.yml  main.py  pyproject.toml  requirements.txt
api/sentinel/: __init__.py
api/sentinel/constants/: __init__.py  risk.py  roles.py  sizes.py
api/sentinel/routes/: assessments.py  example_assessment.json  frontend.py  health.py
cli/: __init__.py  ai.py  ai_workflow.py  application.py  application_info.py  assessment.py  assessor.py  cli.py  cve.py  database.py  full_assessment.json  google_search.py  langchain_process.py  main.py  pyproject.toml  research_report.json  run.py  runner.py
cli/helpers/: build_cve_counts_from_section.py  build_incident_counts.py  build_metadata.py
cli/models/: __init__.py  application.py  assessment.py  llm_models.py  vendor.py
cli/tools/: google_search.py  nvd_tool.py  taxonomy_tool.py  trust_score_engine.py  web_tool.py
data/: 1password_agilebits-inc.json
sentinel/: __init__.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: ApplicationInput.tsx  AssessmentDetails.tsx  AssessmentWorkflow.tsx  Footer.tsx  Header.tsx  Home.tsx  LoadingSpinner.tsx  OrganizationSize.tsx  RiskTolerance.tsx  RoleDropdown.tsx  RoleSelection.tsx
web/src/components/assessment/: AlternativesCard.tsx  ApplicationVendorCard.tsx  ArchitectureCard.tsx  CertificationsCard.tsx  ComplianceCard.tsx  ConfidenceScoreCard.tsx  IncidentsCard.tsx  KeyTakeawaysCard.tsx  RecentCVEsCard.tsx  RecentIncidentsCard.tsx  SpiderChartCard.tsx  TrustScoreCard.tsx  VulnerabilitiesCard.tsx
web/src/constants/: risk.ts  roles.ts  sizes.ts
web/src/services/: api.ts  types.ts
