[project]
name = "sentinel"
version = "0.1.0"
description = "Unified Sentinel API + CLI"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
  {name = "Sentinel"}
]

# Union of api/ and cli/ direct dependencies
# (Prefer latest seen in compiled requirements; deduped)
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "langchain>=1.0.7",
    "langchain-anthropic>=1.0.4",
    "langchain-google-genai>=2.1.12",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "typer>=0.20.0",
    "orjson>=3.11.4",
    "beautifulsoup4>=4.14.2",
    "readability-lxml>=0.8.4.1",
    "google-search-results>=2.4.2",
]

[project.scripts]
# Provide a unified CLI entrypoint (Typer app is callable)
sentinel-cli = "cli.main:app"

[tool.setuptools]
# Using automatic discovery configured below

[tool.setuptools.packages.find]
include = ["api", "cli"]
exclude = ["web", "dist", "build"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
